--- a/src/main/resource/list.tpl.html
+++ b/src/main/resource/list.tpl.html
@@ -96,7 +96,8 @@
 				</div>
 			</article>
 		</template>
-		<script type="text/javascript" src="./js/list.js"></script>
+		<input type="hidden" id="JsonFileName" value="#####JSONFILE#####">
+		<script type="text/javascript" src="./js/listscreen.js"></script>
 	</div>
 </body>
 </html>
