--- a/src/main/resource/list.tpl.html
+++ b/src/main/resource/list.tpl.html
@@ -33,8 +33,8 @@
 		<a class="navbar-brand navbar-brand-flex-left" href="./" style="color: #000;">明月の開発ストーリ</a>
 		<div class="collapse navbar-collapse navbar-collapse-flex-100" id="navbarSupportedContent">
 			<div class="form-inline my-2 my-lg-0 search-custom">
-				<input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-				<button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+				<input class="form-control mr-sm-2 search-text" type="search" placeholder="Search" aria-label="Search">
+				<button class="btn btn-outline-success my-2 my-sm-0 search-btn" type="submit">Search</button>
 			</div>
 		</div>
 	</nav>
@@ -51,8 +51,8 @@
 			</ul>
 		</div>
 		<div class="form-inline my-2 my-lg-0 search-custom side-search" style="padding: 5px;">
-			<input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search" style="width:65%">
-			<button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+			<input class="form-control mr-sm-2 search-text" type="search" placeholder="Search" aria-label="Search" style="width:65%">
+			<button class="btn btn-outline-success my-2 my-sm-0 search-btn" type="submit">Search</button>
 		</div>
 		<div class="side-list">
 			<ul class="side-nav">
@@ -68,7 +68,7 @@
 				<h3>
 					<span>#####CATEGORYNAME#####</span> 検索結果
 				</h3>
-				<p>検索件数 : <span id="searchResultCount"></span>　件</p>
+				<p>検索件数 : <span id="searchResultCount"></span> 件</p>
 			</div>
 			<div class="list-area"></div>
 		</div>
