--- a/src/main/resource/search.tpl.html
+++ b/src/main/resource/search.tpl.html
@@ -51,7 +51,7 @@
 			</ul>
 		</div>
 		<div class="form-inline my-2 my-lg-0 search-custom side-search" style="padding: 5px;">
-			<input class="form-control mr-sm-2 search-text" type="search" placeholder="Search" aria-label="Search" style="width:65%">
+			<input class="form-control mr-sm-2 search-text" type="search" placeholder="Search" aria-label="Search" style="width: 65%">
 			<button class="btn btn-outline-success my-2 my-sm-0 search-btn" type="submit">Search</button>
 		</div>
 		<div class="side-list">
@@ -62,7 +62,41 @@
 	</aside>
 	<section class="menu-back-layout menu-close off"></section>
 	<div class="container-fluid main-container">
-		hello world
+		<!-- 메인 -->
+		<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 list-area-panel">
+			<div class="searchList">
+				<h3>
+					<span id="searchTitle"></span> 検索結果
+				</h3>
+				<p>検索件数 : <span id="searchResultCount"></span>　件</p>
+			</div>
+			<div class="list-area"></div>
+		</div>
+		<template class="list-article">
+			<article class="list-item">
+				<div class="list-row pos-right ratio-fixed ratio-4by3 crop-center lts-narrow fouc clearfix searchListEntity">
+					<div class="list-body" style="width: 100%;">
+						<div class="flexbox">
+							<a class="list-link" href="">
+								<h5 class="list-head ie-nanum ci-link"></h5>
+								<p class="list-summary"></p>
+							</a>
+							<div class="list-meta ie-dotum">
+								<p>
+									<span class="data-column-label">カテゴリ :</span>
+									<span class="timeago ff-h dt-published category-column"></span>
+								</p> 
+								<p>
+									<span class="data-column-label">最終修正日付 :</span>
+									<span class="timeago ff-h dt-published date-column update-date"></span>
+								</p>
+							</div>
+						</div>
+					</div>
+				</div>
+			</article>
+		</template>
+		<script type="text/javascript" src="./js/searchscreen.js"></script>
 	</div>
 </body>
 </html>
