--- a/src/main/resource/list.tpl.html
+++ b/src/main/resource/list.tpl.html
@@ -31,12 +31,6 @@
 	<nav class="navbar navbar-expand-lg nav-costom">
 		<button class="menu-toggle" type="button">MENU</button>
 		<a class="navbar-brand navbar-brand-flex-left" href="./" style="color: #000;">明月の開発ストーリ</a>
-		<div class="collapse navbar-collapse navbar-collapse-flex-100" id="navbarSupportedContent">
-			<div class="form-inline my-2 my-lg-0 search-custom">
-				<input class="form-control mr-sm-2 search-text" type="search" placeholder="Search" aria-label="Search">
-				<button class="btn btn-outline-success my-2 my-sm-0 search-btn" type="submit">Search</button>
-			</div>
-		</div>
 	</nav>
 	<aside class="leftside">
 		<h5 class="side-header"><img src="https://t1.daumcdn.net/cfile/tistory/1935C94C505D9F8B13">明月の開発ストーリ</h5>
@@ -82,6 +76,7 @@
 								<p class="list-summary"></p>
 							</a>
 							<div class="list-meta ie-dotum">
+								<p><a href="" class="p-category ci-color"></a></p>
 								<p><span class="timeago ff-h dt-published tag-column"></span></p> 
 								<p>
 									<span class="data-column-label">作成日付 :</span>
