--- a/src/main/resource/main.tpl.html
+++ b/src/main/resource/main.tpl.html
@@ -89,8 +89,11 @@
 								<span class="timeago ff-h dt-published tag-column"></span>
 							</p>
 							<p>
-								<span class="data-column-label">作成日付 :</span> <span class="timeago ff-h dt-published date-column create-date"></span> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp; <span class="data-column-label">修正日付
-									:</span> <span class="timeago ff-h dt-published date-column update-date"></span>
+								<span class="data-column-label">作成日付 :</span> 
+								<span class="timeago ff-h dt-published date-column create-date"></span> 
+								&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; 
+								<span class="data-column-label">修正日付	:</span> 
+								<span class="timeago ff-h dt-published date-column update-date"></span>
 							</p>
 						</div>
 					</div>
