--- a/src/main/resource/post.tpl.html
+++ b/src/main/resource/post.tpl.html
@@ -19,6 +19,7 @@
 <link rel="stylesheet" type="text/css" href="./css/highlight.init.css">
 <link rel="stylesheet" type="text/css" href="./css/loader.css">
 <link rel="stylesheet" type="text/css" href="./css/common.css">
+<link rel="stylesheet" type="text/css" href="./css/post.css">
 
 <script src="//code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
@@ -66,7 +67,7 @@
 		<article class="entry post">
 			<div class="titleArea">
 				<div class="title" id="article_title">
-					<h3 id="titleTxt">#####CONTENTS_TITLE#####</h3>
+					<h1 id="titleTxt">#####CONTENTS_TITLE#####</h1>
 				</div>
 				<hr class="titileHr">
 				<div class="categoryArea">
