--- a/src/main/resource/post.tpl.html
+++ b/src/main/resource/post.tpl.html
@@ -5,6 +5,29 @@
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device-width,initial-scale=1.0,minimum-scale=1.0,maximum-scale=1.0,user-scalable=no">
 <meta name="theme-color" content="#29343a">
+<meta name="keywords" content="#####CATEGORY_NAME#####">
+<meta name="description" content="#####DESCRIPTION#####">
+<meta name="author" content="#####AUTHOR#####">
+<meta name="distribution" content="#####AUTHOR#####" />
+<meta name="copyright" content="#####AUTHOR#####" />
+<meta name="title" content="#####TITLE#####">
+<link rel="canonical" href="#####CANONICAL#####">
+<meta name="robots" content="ALL">
+
+<meta property="og:type" content="website">
+<meta property="og:title" content="#####TITLE#####">
+<meta property="og:description" content="#####DESCRIPTION#####">
+<meta property="og:image" content="#####IMAGEURL#####">
+<meta property="og:url" content="#####CANONICAL#####">
+<meta property="og:site_name" content="明月の開発ストーリ" >
+
+<!-- <meta name="twitter:card" content="summary_large_image">
+<meta name="twitter:site" content="@TISTORY">-->
+<meta name="twitter:title" content="#####TITLE#####" >
+<meta name="twitter:description" content="#####DESCRIPTION#####" >
+<meta property="twitter:image" content="#####IMAGEURL#####" >
+
+
 <title>#####TITLE#####</title>
 <link rel="stylesheet" href="//stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 <link rel="stylesheet" type="text/css" href="//cdnjs.cloudflare.com/ajax/libs/font-awesome/5.8.2/css/all.css">
