--- a/src/main/resource/post.tpl.html
+++ b/src/main/resource/post.tpl.html
@@ -21,8 +21,9 @@
 <meta property="og:url" content="#####CANONICAL#####">
 <meta property="og:site_name" content="明月の開発ストーリ" >
 
-<!-- <meta name="twitter:card" content="summary_large_image">
-<meta name="twitter:site" content="@TISTORY">-->
+<meta name="twitter:card" content="summary_large_image">
+<meta name="twitter:site" content="@nowonbun">
+<meta name="twitter:creator" content="@nowonbun">
 <meta name="twitter:title" content="#####TITLE#####" >
 <meta name="twitter:description" content="#####DESCRIPTION#####" >
 <meta property="twitter:image" content="#####IMAGEURL#####" >
