--- a/src/main/resource/index.tpl.html
+++ b/src/main/resource/index.tpl.html
@@ -1,20 +1,43 @@
 <!DOCTYPE html>
 <html lang="ja">
 <head>
-<meta charset="utf-8">
-<meta http-equiv="X-UA-Compatible" content="IE=edge">
-<meta name="viewport" content="width=device-width,initial-scale=1.0,minimum-scale=1.0,maximum-scale=1.0,user-scalable=no">
-<meta name="theme-color" content="#29343a">
+<meta charset="utf-8" />
+<meta http-equiv="X-UA-Compatible" content="IE=edge" />
+<meta name="viewport" content="width=device-width,initial-scale=1.0,minimum-scale=1.0,maximum-scale=1.0,user-scalable=no" />
+<meta name="theme-color" content="#29343a" />
+
+<meta name="keywords" content="#####TITLE#####" />
+<meta name="description" content="#####TITLE#####" />
+<meta name="author" content="#####AUTHOR#####" />
+<meta name="distribution" content="#####AUTHOR#####" />
+<meta name="copyright" content="#####AUTHOR#####" />
+<meta name="title" content="#####TITLE#####" />
+<link rel="canonical" href="#####CANONICAL#####" />
+<meta name="robots" content="ALL">
+
+<meta property="og:type" content="website" />
+<meta property="og:title" content="#####TITLE#####" />
+<meta property="og:description" content="#####TITLE#####" />
+<meta property="og:image" content="#####IMAGEURL#####" />
+<meta property="og:url" content="#####CANONICAL#####" />
+<meta property="og:site_name" content="明月の開発ストーリ" />
+
+<meta name="twitter:card" content="summary_large_image" />
+<meta name="twitter:site" content="@nowonbun" />
+<meta name="twitter:creator" content="@nowonbun" />
+<meta name="twitter:title" content="#####TITLE#####" />
+<meta name="twitter:description" content="" />
+<meta property="twitter:image" content="#####IMAGEURL#####" />
+
 <title>#####TITLE#####</title>
-<link rel="stylesheet" href="//stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T"
-	crossorigin="anonymous">
-<link rel="stylesheet" type="text/css" href="//cdnjs.cloudflare.com/ajax/libs/font-awesome/5.8.2/css/all.css">
-<link rel="stylesheet" type="text/css" href="//maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
-<link rel="stylesheet" type="text/css" href="//cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/css/toastr.min.css">
-<link rel="stylesheet" type="text/css" href="//cdnjs.cloudflare.com/ajax/libs/highlight.js/9.13.1/styles/rainbow.min.css">
-<link rel="stylesheet" type="text/css" href="./css/highlight.init.css">
-<link rel="stylesheet" type="text/css" href="./css/loader.css">
-<link rel="stylesheet" type="text/css" href="./css/common.css">
+<link rel="stylesheet" href="//stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous" />
+<link rel="stylesheet" type="text/css" href="//cdnjs.cloudflare.com/ajax/libs/font-awesome/5.8.2/css/all.css" />
+<link rel="stylesheet" type="text/css" href="//maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css" />
+<link rel="stylesheet" type="text/css" href="//cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/css/toastr.min.css" />
+<link rel="stylesheet" type="text/css" href="//cdnjs.cloudflare.com/ajax/libs/highlight.js/9.13.1/styles/rainbow.min.css" />
+<link rel="stylesheet" type="text/css" href="./css/highlight.init.css" />
+<link rel="stylesheet" type="text/css" href="./css/loader.css" />
+<link rel="stylesheet" type="text/css" href="./css/common.css" />
 
 <script type="text/javascript" src="//code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
 <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
@@ -58,47 +81,11 @@
 	<div class="container-fluid main-container">
 		<!-- 메인 -->
 		<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 list-area-panel">
-			<div class="searchList">
-				<h1>
-					<span></span> 検索結果
-				</h1>
-				<p>
-					検索件数 : <span id="searchResultCount"></span> 件
-				</p>
+			<div class="list-area">
+				#####LIST#####
 			</div>
-			<div class="list-area"></div>
 		</div>
-		<template class="list-article">
-		<article class="list-item">
-			<div class="list-row pos-right ratio-fixed ratio-4by3 crop-center lts-narrow fouc clearfix searchListEntity">
-				<div class="list-body" style="width: 100%;">
-					<div class="flexbox">
-						<a class="list-link" href="">
-							<h5 class="list-head ie-nanum ci-link"></h5>
-							<p class="list-summary"></p>
-						</a>
-						<div class="list-meta ie-dotum">
-							<p>
-								<a href="" class="p-category ci-color"></a>
-							</p>
-							<p>
-								<span class="timeago ff-h dt-published tag-column"></span>
-							</p>
-							<p>
-								<span class="data-column-label">作成日付 :</span> 
-								<span class="timeago ff-h dt-published date-column create-date"></span> 
-								&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; 
-								<span class="data-column-label">修正日付	:</span> 
-								<span class="timeago ff-h dt-published date-column update-date"></span>
-							</p>
-						</div>
-					</div>
-				</div>
-			</div>
-		</article>
-		</template>
-		<input type="hidden" id="JsonFileName" value="main.json">
-		<script type="text/javascript" src="./js/mainscreen.js"></script>
+		<script type="text/javascript" src="./js/listscreen.js"></script>
 	</div>
 	<footer>
 		<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 footer-bottom">
