--- a/src/main/resource/index.tpl.html
+++ b/src/main/resource/index.tpl.html
@@ -5,6 +5,8 @@
 <meta http-equiv="X-UA-Compatible" content="IE=edge" />
 <meta name="viewport" content="width=device-width,initial-scale=1.0,minimum-scale=1.0,maximum-scale=1.0,user-scalable=no" />
 <meta name="theme-color" content="#29343a" />
+<link rel="shortcut icon" href="./img/favicon.ico" type="image/x-icon" />
+<link rel="icon" href="/favicon.ico" type="image/x-icon" />
 
 <meta name="keywords" content="#####TITLE#####" />
 <meta name="description" content="#####TITLE#####" />
@@ -20,11 +22,11 @@
 <meta property="og:description" content="#####TITLE#####" />
 <meta property="og:image" content="#####IMAGEURL#####" />
 <meta property="og:url" content="#####CANONICAL#####" />
-<meta property="og:site_name" content="明月の開発ストーリ" />
+<meta property="og:site_name" content="#####SITENAME#####" />
 
 <meta name="twitter:card" content="summary_large_image" />
-<meta name="twitter:site" content="@nowonbun" />
-<meta name="twitter:creator" content="@nowonbun" />
+<meta name="twitter:site" content="#####TWITTER#####" />
+<meta name="twitter:creator" content="#####TWITTER#####" />
 <meta name="twitter:title" content="#####TITLE#####" />
 <meta name="twitter:description" content="" />
 <meta property="twitter:image" content="#####IMAGEURL#####" />
@@ -53,11 +55,11 @@
 	<section class="loader-layout off"></section>
 	<nav class="navbar navbar-expand-lg nav-costom">
 		<button class="menu-toggle" type="button">MENU</button>
-		<a class="navbar-brand navbar-brand-flex-left" href="./" style="color: #000;">明月の開発ストーリ</a>
+		<a class="navbar-brand navbar-brand-flex-left" href="./" style="color: #000;">#####SITENAME#####</a>
 	</nav>
 	<aside class="leftside">
 		<h5 class="side-header">
-			<img src="https://t1.daumcdn.net/cfile/tistory/1935C94C505D9F8B13">明月の開発ストーリ
+			<img src="https://t1.daumcdn.net/cfile/tistory/1935C94C505D9F8B13">#####SITENAME#####
 		</h5>
 		<div class="side-menu bs-glyphicons">
 			<ul class="bs-glyphicons-list">
