2019-09-03 The adsense was added, The font link was modified, The recently and same category list was added.

--- a/src/main/resource/post.tpl.html
+++ b/src/main/resource/post.tpl.html
@@ -1,6 +1,17 @@
 <!DOCTYPE html>
 <html lang="ja">
 <head>
+<style type="text/css">
+@font-face { 
+	font-family: 'Noto Sans JP';
+	src: url('https://nowonbun.github.io/nowonbunfont/NotoSansJP-Regular.otf?version=1') format('opentype');
+	font-style:normal;
+	font-weight:normal;
+}
+body{
+	font-family: 'Noto Sans JP', 'Arial',sans-serif!important;
+}
+</style>
 <meta charset="utf-8" />
 <meta http-equiv="X-UA-Compatible" content="IE=edge" />
 <meta name="viewport" content="width=device-width,initial-scale=1.0,minimum-scale=1.0,maximum-scale=1.0,user-scalable=no" />
@@ -33,7 +44,7 @@
 
 
 <title>#####TITLE#####</title>
-<link rel="stylesheet" href="//fonts.googleapis.com/css?family=Noto+Sans+JP&display=swap" />
+<!-- <link rel="stylesheet" href="//fonts.googleapis.com/css?family=Noto+Sans+JP&display=swap" />-->
 <link rel="stylesheet" href="//stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous" />
 <link rel="stylesheet" type="text/css" href="//cdnjs.cloudflare.com/ajax/libs/font-awesome/5.8.2/css/all.css" />
 <link rel="stylesheet" type="text/css" href="//maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css" />
@@ -52,6 +63,7 @@
 <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
 <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/jquery-cookie/1.4.1/jquery.cookie.js"></script>
 <script type="text/javascript" src="./js/common.js"></script>
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 </head>
 <body>
 	<div class="loader off"></div>
@@ -97,10 +109,24 @@
 				</div>
 			</div>
 			<div class="article">
+				<!-- 일본 반응형 - 1 -->
+				<ins class="adsbygoogle adsens_responsive" style="display:inline-block" data-ad-client="" data-ad-slot=""></ins>
+				<script>(adsbygoogle = window.adsbygoogle || []).push({});</script>
 				<div class="tt_article_useless_p_margin" id="article_contents">#####CONTENTS#####</div>
+				<!-- 일본 반응형 2 -->
+				<ins class="adsbygoogle adsens_responsive" style="display:inline-block" data-ad-client="" data-ad-slot=""></ins>
+				<script>(adsbygoogle = window.adsbygoogle || []).push({});</script>
 				<hr />
 				<div class="list-meta ie-dotum">
 					<span class="timeago ff-h dt-published tag-column" id="article_tag"> #####TAG##### </span>
+				</div>
+				<div class="other-category">
+					<div class="list-title">「<a href="#####CATEGORY_LINK#####">#####CATEGORY_NAME#####</a>」の他投稿</div>
+					#####OTHERCATEGORY#####
+				</div>
+				<div class="recently-post">
+					<div class="list-title">最新投稿</div>
+					#####RECENTLYCATEGORY#####
 				</div>
 			</div>
 		</article>
