Add pre-post article and sort other category

--- a/src/main/resource/post.tpl.html
+++ b/src/main/resource/post.tpl.html
@@ -115,6 +115,7 @@ body{
 				<ins class="adsbygoogle adsens_responsive" style="display:inline-block" data-ad-client="" data-ad-slot=""></ins>
 				<script>(adsbygoogle = window.adsbygoogle || []).push({});</script>
 				<div class="tt_article_useless_p_margin" id="article_contents" property="description">#####CONTENTS#####</div>
+				#####PRE_POST_ARTICLE#####
 				<!-- 일본 반응형 2 -->
 				<ins class="adsbygoogle adsens_responsive" style="display:inline-block" data-ad-client="" data-ad-slot=""></ins>
 				<script>(adsbygoogle = window.adsbygoogle || []).push({});</script>
